fix some bugs plus change behaviour when knife is visible

--- a/page.css
+++ b/page.css
@@ -282,3 +282,7 @@ ul {
 .grabable {
     cursor: grabbing;
 }
+
+.solved{
+    margin-top:0.5em;
+}
